// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewModal component component snapshots closed 1`] = `
<FullscreenModal
  beforeBodyNode={
    <React.Fragment>
      <ReviewActions />
      <DemoErrors />
    </React.Fragment>
  }
  className="review-modal"
  isOpen={false}
  modalBodyClassName="review-modal-body"
  onClose={[MockFunction this.onClose]}
  title="test-ora-name"
>
  <LoadingMessage
    message={
      Object {
        "defaultMessage": "Loading response",
        "description": "loading text for submission response review screen",
        "id": "ora-grading.ReviewModal.loadingResponse",
      }
    }
  />
  <CloseReviewConfirmModal
    isOpen={false}
    onCancel={[MockFunction this.hideConfirmCloseReviewGrade]}
    onConfirm={[MockFunction this.confirmCloseReviewGrade]}
  />
</FullscreenModal>
`;

exports[`ReviewModal component component snapshots error 1`] = `
<FullscreenModal
  beforeBodyNode={
    <React.Fragment>
      <ReviewActions />
      <DemoErrors />
    </React.Fragment>
  }
  className="review-modal"
  isOpen={true}
  modalBodyClassName="review-modal-body"
  onClose={[MockFunction this.onClose]}
  title="test-ora-name"
>
  <ReviewContent />
  <CloseReviewConfirmModal
    isOpen={false}
    onCancel={[MockFunction this.hideConfirmCloseReviewGrade]}
    onConfirm={[MockFunction this.confirmCloseReviewGrade]}
  />
</FullscreenModal>
`;

exports[`ReviewModal component component snapshots loading 1`] = `
<FullscreenModal
  beforeBodyNode={
    <React.Fragment>
      <ReviewActions />
      <DemoErrors />
    </React.Fragment>
  }
  className="review-modal"
  isOpen={true}
  modalBodyClassName="review-modal-body"
  onClose={[MockFunction this.onClose]}
  title="test-ora-name"
>
  <ReviewContent />
  <LoadingMessage
    message={
      Object {
        "defaultMessage": "Loading response",
        "description": "loading text for submission response review screen",
        "id": "ora-grading.ReviewModal.loadingResponse",
      }
    }
  />
  <CloseReviewConfirmModal
    isOpen={false}
    onCancel={[MockFunction this.hideConfirmCloseReviewGrade]}
    onConfirm={[MockFunction this.confirmCloseReviewGrade]}
  />
</FullscreenModal>
`;

exports[`ReviewModal component component snapshots success 1`] = `
<FullscreenModal
  beforeBodyNode={
    <React.Fragment>
      <ReviewActions />
      <DemoErrors />
    </React.Fragment>
  }
  className="review-modal"
  isOpen={true}
  modalBodyClassName="review-modal-body"
  onClose={[MockFunction this.onClose]}
  title="test-ora-name"
>
  <ReviewContent />
  <CloseReviewConfirmModal
    isOpen={false}
    onCancel={[MockFunction this.hideConfirmCloseReviewGrade]}
    onConfirm={[MockFunction this.confirmCloseReviewGrade]}
  />
</FullscreenModal>
`;

exports[`ReviewModal component component snapshots success, demo (title message) 1`] = `
<FullscreenModal
  beforeBodyNode={
    <React.Fragment>
      <ReviewActions />
      <DemoErrors />
    </React.Fragment>
  }
  className="review-modal"
  isOpen={true}
  modalBodyClassName="review-modal-body"
  onClose={[MockFunction this.onClose]}
  title="test-ora-name - Grading Demo"
>
  <ReviewContent />
  <CloseReviewConfirmModal
    isOpen={false}
    onCancel={[MockFunction this.hideConfirmCloseReviewGrade]}
    onConfirm={[MockFunction this.confirmCloseReviewGrade]}
  />
</FullscreenModal>
`;
